Update to aframe 0.7.1 and NAF 0.5.1

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A-Painter</title>
+    <title>Networked A-Painter</title>
     <style>html,body{background-color:#030404}</style>
     <link rel="icon" href="img/icon-256.png">
-    <meta name="description" content="Paint in VR in your browser. Powered by A-Frame.">
+    <meta name="description" content="Paint in VR in your browser, with friends. Powered by A-Frame and Networked-Aframe.">
     <script>
       UPLOADCARE_LOCALE = 'en';
       UPLOADCARE_PUBLIC_KEY = 'eb0df3191b88f403ad76';
@@ -14,9 +14,9 @@
     <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.12/dist/clipboard.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
     <script src="vendor/easyrtc.js"></script>
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
     <script src="build.js"></script>
-    <script src="https://unpkg.com/networked-aframe@^0.3.1/dist/networked-aframe.js"></script>
+    <script src="https://unpkg.com/networked-aframe@^0.5.1/dist/networked-aframe.js"></script>
     <script src="https://unpkg.com/aframe-motion-capture-components@^0.1.6/dist/aframe-motion-capture-components.min.js"></script>
     <script src="vendor/aframe-extras.loaders.js"></script>
     <script src="https://unpkg.com/aframe-gltf-exporter-component/dist/aframe-gltf-exporter-component.min.js"></script>
